2006-11-30  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-get-matched-items): Rename `max-numbers' to `range',
	and swap `range' and `regexp'.
	(mixi-get-friends): Follow the change above.
	(mixi-get-favorites): Ditto.
	(mixi-get-logs): Ditto.
	(mixi-get-diaries): Ditto.
	(mixi-get-new-diaries): Ditto.
	(mixi-get-communities): Ditto.
	(mixi-get-bbses): Ditto.
	(mixi-get-new-bbses): Ditto.
	(mixi-get-comments): Ditto.
	(mixi-get-new-comments): Ditto.
	(mixi-get-messages): Ditto.
	(mixi-get-introductions): Ditto.

2006-11-30  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-comment-article): Simplify.

2006-11-29  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-comment-article): Cache the content of all
	comment.

2006-11-29  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi): Add the COMMENT-CACHE slot.
	(initialize-instance): New method.
	(shimbun-mixi-get-headers): Cache the content of comment.
	(shimbun-comment-article): Use cache.
	(shimbun-article): Follow the change above.

2006-11-28  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-x-face-alist): New variable.

2006-11-28  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-object-title): Follow the event object.
	(mixi-object-content): Ditto.
	(mixi-bbs-owner): New alias.
	(mixi-bbs-id): Ditto.
	(mixi-bbs-time): Ditto.
	(mixi-bbs-title): Ditto.
	(mixi-bbs-content): Ditto.

	* sb-mixi.el (shimbun-mixi-make-subject): Follow the change above.
	(shimbun-mixi-make-body): Ditto.
	
2006-11-27  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-event-cache): New variable.
	(mixi-make-event): New function.
	(mixi-event-url-regexp): New constant.
	(mixi-make-event-from-url): New function.
	(mixi-event-p): New macro.
	(mixi-event-page): Ditto.
	(mixi-event-time-regexp): New regexp.
	(mixi-event-title-regexp): Ditto.
	(mixi-event-owner-regexp): Ditto.
	(mixi-event-date-regexp): Ditto.
	(mixi-event-place-regexp): Ditto.
	(mixi-event-detail-regexp): Ditto.